# armoriq

./: .env.example  .gitignore  AGENTS.md  Assignment_ _Build a Guarded AI Agent with MCP Support_.txt  DEPLOYMENT.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.toml  turbo.json
apps/agent/: .gitignore  Dockerfile  package.json  pyproject.toml  requirements.txt  run_mcp_bank.sh  servers.json
apps/agent/src/: main.py  models.py
apps/agent/src/agent/: llm.py  loop.py
apps/agent/src/policy/: __init__.py  engine.py
apps/agent/src/store/: db.py  models.py
apps/agent/src/transport/: manager.py
apps/agent/tests/: test_mcp_manager.py  test_policy_engine.py
apps/mcp-bank/: .gitignore  package.json  pyproject.toml  requirements.txt
apps/mcp-bank/mcp_bank/: __main__.py  bank.py  tools.py
apps/mcp-bank/tests/: test_bank.py
apps/web/: Dockerfile  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/ui/: button.tsx
