[project]
name = "armoriq-agent"
version = "0.1.0"
description = "Guarded AI Agent with MCP Support"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "google-generativeai>=0.8.5",
    "langchain-mcp-adapters>=0.1.0",
    "mcp>=1.1.0",
    "anthropic>=0.38.0",
    "pydantic>=2.10.0",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.20",
    "websockets>=12.0",
    "httpx>=0.28.1",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
