[project]
name = "armoriq-mcp-bank"
version = "0.1.0"
description = "Mock Bank MCP Server"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.1.0",
    "fastmcp>=1.0.0",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
